...
                        form.isEditingName = isEditing
                    }
                    .onChange(of: log.name) { _ in
                        limitNameText(nameTextLimit)
                        validateNameText()
                    }
                    .accessibility(label: Text("Name Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                    .background(Color(ColorSet.white.rawValue))
                    .border(
                        Color(ColorSet.cream.rawValue),
                        width: form.isEditingName ? 1 : 0
...
                    TextField("", text: $log.location) { isEditing in
                        form.isEditingLocation = isEditing
                    }
                    .onChange(of: log.location) { _ in
                        limitLocationText(locationTextLimit)
                    }
                    .accessibility(label: Text("Location Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                    .background(Color(ColorSet.white.rawValue))
                    .border(
                        Color(ColorSet.cream.rawValue),
                        width: form.isEditingLocation ? 1 : 0
...
                            form.isEditingDistance = isEditing
                        }
                        .onChange(of: log.distance) { _ in
                            filterDistanceText()
                            validateTimeAndDistance()
                        }
                        .accessibility(label: Text("Distance Field"))
                        .autocapitalization(.none)
                        .disableAutocorrection(true)
                        .keyboardType(.numbersAndPunctuation)
                        .background(Color(ColorSet.white.rawValue))
                        .border(
                            Color(ColorSet.cream.rawValue),
...
                    .onChange(of: form.displayedTime) { _ in
                        filterTimeText()
                        limitTimeText(timeTextLimit)
                        setFormattedTimeText()
                        validateTimeAndDistance()
                    }
                    .accessibility(label: Text("Time Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                    .keyboardType(.numbersAndPunctuation)
                    .background(Color(ColorSet.white.rawValue))
                    .border(
                        Color(ColorSet.cream.rawValue),
...
                }
            }
            .padding(.top, 5.0)
            
            HStack {
                VStack(alignment: .leading) {
                    Text("Feel")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
                        .bold()
                    
                    Slider(
                        value: $log.feel,
...
                    TextField("", text: $log.description) { isEditing in
                        form.isEditingDescription = isEditing
                    }
                    .onReceive(Just(log.description), perform: { _ in
                        limitDescriptionText(descriptionTextLimit)
                    })
                    .accessibility(label: Text("Description Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                    .background(Color(ColorSet.white.rawValue))
                    .border(
                        Color(ColorSet.cream.rawValue),
                        width: form.isEditingDescription ? 1 : 0
...
