...
    private static let feel_descriptions = [
        "Terrible",
        "Very Bad",
        "Bad",
        "Pretty Bad",
        "Mediocre",
        "Average",
        "Fairly Good",
        "Good",
        "Great",
        "Fantastic"
    ]
    
    /**
     Retrieve a color that corresponds to how someone felt in their exercise
...
