...
                    .bold()
                    .alert(isPresented: $createLog.error) {
                        Alert(
                            title: Text(
                                meta.isExistingLog ?
                                    "An unexpected error occurred while updating the exercise log." :
                                    "An unexpected error occurred while creating an exercise log."
                            ),
                            primaryButton: .default(
                                Text("Cancel"),
                                action: {
                                    createLog.error = false
                                }
                            ),
                            secondaryButton: .cancel(
                                Text("Try Again"),
                                action: {
                                    createLog.error = false
                                    
                                    if meta.isExistingLog {
                                        createLog.updateExerciseLog(newLog: log, existingLog: existingLog.log ?? Log()) {}
                                    } else {
...
